--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
 	"author": "Rahul Keerthi <rahulkeerthi2@gmail.com>",
 	"license": "MIT",
 	"scripts": {
-		"dev": "webpack-dev-server",
+		"dev": "npm-run-all -s generate webpackDev",
+		"webpackDev": "webpack-dev-server",
+		"build": "npm-run-all -s generate webpackBuild",
 		"webpackBuild": "webpack",
-		"previewDist": "node previewDist"
+		"previewDist": "node previewDist",
+		"generate": "babel-node --presets=@babel/preset-react,@babel/preset-env generateHtml.js"
 	},
 	"dependencies": {
 		"@babel/core": "^7.11.6",
+		"@babel/node": "^7.10.5",
 		"@babel/preset-env": "^7.11.5",
 		"@babel/preset-react": "^7.10.4",
 		"axios": "^0.20.0",
 		"babel-loader": "^8.1.0",
-		"clean-webpack-plugin": "^3.0.0",
-		"dotenv-webpack": "^3.0.0",
-		"express": "^4.17.1",
-		"fs-extra": "^9.0.1",
-		"html-webpack-harddisk-plugin": "^1.0.2",
-		"html-webpack-plugin": "^4.5.0",
 		"immer": "^7.0.9",
 		"imports-loader": "^1.1.0",
 		"process": "0.11.10",
@@ -33,7 +31,16 @@
 		"socket.io-client": "^2.3.0",
 		"use-immer": "^0.4.1",
 		"webpack": "^4.44.1",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.11.0"
+		"webpack-cli": "^3.3.12"
+	},
+	"devDependencies": {
+		"webpack-dev-server": "^3.11.0",
+		"yarn-run-all": "^3.1.1",
+		"clean-webpack-plugin": "^3.0.0",
+		"dotenv-webpack": "^3.0.0",
+		"express": "^4.17.1",
+		"fs-extra": "^9.0.1",
+		"html-webpack-harddisk-plugin": "^1.0.2",
+		"html-webpack-plugin": "^4.5.0"
 	}
 }
